--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,16 @@
     <style name="Base.Theme.RegistroDatos" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">#7700FF</item>
+        <item name="android:background">#4CAF50</item>
+
     </style>
 
-    <style name="Theme.RegistroDatos" parent="Base.Theme.RegistroDatos" />
+    <style name="Theme.RegistroDatos" parent="Base.Theme.RegistroDatos">
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">#7700FF</item>
+        <item name="android:background">#4CAF50</item>
+        </style>
+
 </resources>
