--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,14 +4,14 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="android:textSize">20dp</item>
-        <item name="android:textColor">#7700FF</item>
+        <item name="android:editTextColor">#7700FF</item>
         <item name="android:background">#4CAF50</item>
 
     </style>
 
     <style name="Theme.RegistroDatos" parent="Base.Theme.RegistroDatos">
         <item name="android:textSize">20dp</item>
-        <item name="android:textColor">#7700FF</item>
+        <item name="android:editTextColor">#7700FF</item>
         <item name="android:background">#4CAF50</item>
         </style>
 
